Added captcha_sitekey and captcha_secret to settings

--- a/ghost/core/core/server/data/schema/default-settings/default-settings.json
+++ b/ghost/core/core/server/data/schema/default-settings/default-settings.json
@@ -327,6 +327,14 @@
                 "isIn": [["true", "false"]]
             },
             "type": "boolean"
+        },
+        "captcha_sitekey": {
+            "defaultValue": null,
+            "type": "string"
+        },
+        "captcha_secret": {
+            "defaultValue": null,
+            "type": "string"
         }
     },
     "portal": {
