Initial POC for Tinybird tests in mocha

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -34,6 +34,7 @@
     "test:integration": "yarn test:base './test/integration' --timeout=10000",
     "test:e2e": "yarn test:base ./test/e2e-* --timeout=15000",
     "test:regression": "yarn test:base './test/regression' --timeout=60000",
+    "test:tinybird": "yarn test:base './test/tinybird' --timeout=60000",
     "test:browser": "NODE_ENV=testing-browser playwright test",
     "test:browser:admin": "NODE_ENV=testing-browser  playwright test test/e2e-browser --project=admin",
     "test:browser:portal": "NODE_ENV=testing-browser playwright test test/e2e-browser --project=portal",
