--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -53,6 +53,7 @@ ENV NX_REJECT_UNKNOWN_LOCAL_CACHE=false
 COPY package.json yarn.lock ./
 
 # Copy all package.json files
+COPY apps/stats/package.json apps/stats/package.json
 COPY apps/admin-x-activitypub/package.json apps/admin-x-activitypub/package.json
 COPY apps/admin-x-demo/package.json apps/admin-x-demo/package.json
 COPY apps/admin-x-design-system/package.json apps/admin-x-design-system/package.json
