--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -109,7 +109,6 @@
     "@tryghost/members-offers": "0.0.0",
     "@tryghost/metrics": "1.0.37",
     "@tryghost/milestones": "0.0.0",
-    "@tryghost/minifier": "0.0.0",
     "@tryghost/mw-error-handler": "0.0.0",
     "@tryghost/mw-vhost": "0.0.0",
     "@tryghost/nodemailer": "0.3.45",
@@ -150,6 +149,7 @@
     "cookie-session": "2.1.0",
     "cookies": "0.9.1",
     "cors": "2.8.5",
+    "csso": "5.0.5",
     "csv-writer": "1.6.0",
     "date-fns": "2.30.0",
     "dompurify": "3.2.3",
@@ -219,6 +219,8 @@
     "stripe": "8.222.0",
     "superagent": "5.3.1",
     "superagent-throttle": "1.0.1",
+    "terser": "5.36.0",
+    "tiny-glob": "0.2.9",
     "tough-cookie": "4.1.4",
     "ua-parser-js": "1.0.40",
     "xml": "1.0.1"
