--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -234,6 +234,8 @@
     "@types/bookshelf": "1.2.9",
     "@types/common-tags": "1.8.4",
     "@types/node": "22.13.5",
+    "@types/sinon": "17.0.4",
+    "@types/supertest": "6.0.3",
     "c8": "8.0.1",
     "cli-progress": "3.12.0",
     "cssnano": "7.0.4",
