--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -859,6 +859,9 @@ jobs:
         working-directory: ghost/web-analytics
     if: needs.job_setup.outputs.changed_tinybird == 'true'
     steps:
+      - name: Lint datasources and pipes
+        run: |
+          ./scripts/lint.sh
       - name: Get User Permission
         id: get-user-permission
         uses: actions-cool/check-user-permission@v2
