Ignored Tinybird CLI version warning
no issue

- The Tinybird CLI outputs a warning message when the version of the CLI is not the latest version.
- This can be a problem because the warning message is included in the test results files, which causes tests to fail.
- This is particularly annoying because we are on the latest version of the CLI, but we are getting the warning for development builds of the CLI, not just the latest stable release.
- This commit adds the `TB_VERSION_WARNING` environment variable to the shell opened with `yarn tb` and to the Github Actions workflows to suppress the warning message.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -851,6 +851,8 @@ jobs:
   job_tinybird:
     name: Tinybird Tests (Web Analytics)
     runs-on: ubuntu-latest
+    env:
+      TB_VERSION_WARNING: 0
     needs: [
       job_setup
     ]
@@ -1299,6 +1301,8 @@ jobs:
           url: ${{ steps.cdn_paths.outputs.cdn_paths }}
   deploy_tinybird:
     runs-on: ubuntu-latest
+    env:
+      TB_VERSION_WARNING: 0
     needs: [
       job_setup,
       job_tinybird
