Fixed typo in CI job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
               - '!ghost/web-analytics/**/*.md'
             tinybird-forward:
               - 'ghost/core/core/server/data/tinybird'
-              - '!'ghost/core/core/server/data/tinybird/**/*.md'
+              - '!ghost/core/core/server/data/tinybird/**/*.md'
             any-code:
               - '!**/*.md'
 
