Added job_tinybird_forward to required tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1178,6 +1178,7 @@ jobs:
         job_admin_x_settings,
         job_comments_ui,
         job_signup_form,
+        job_tinybird_forward,
         job_tinybird
       ]
     if: always()
