--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1332,6 +1332,32 @@ jobs:
         uses: gacts/purge-jsdelivr-cache@v1
         with:
           url: ${{ steps.cdn_paths.outputs.cdn_paths }}
+
+  deploy_tinybird_forward:
+    name: Deploy Tinybird Forward
+    runs-on: ubuntu-latest
+    needs: [
+      job_setup,
+      job_tinybird_forward
+    ]
+    if: always() && needs.job_setup.outputs.changed_tinybird_forward == 'true' && needs.job_setup.result == 'success' && needs.job_tinybird_forward.result == 'success' && needs.job_setup.outputs.is_main == 'true'
+    env:
+      TINYBIRD_HOST: ${{ secrets.TINYBIRD_HOST }}
+      TINYBIRD_TOKEN: ${{ secrets.TINYBIRD_TOKEN }}
+    defaults:
+      run:
+        working-directory: ghost/core/core/server/data/tinybird
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Tinybird CLI
+        run: curl -fsSL https://tinybird.co/install.sh | sh
+      - name: Deploy project
+        run: tb --cloud --staging --host ${{ env.TINYBIRD_HOST }} --token ${{ env.TINYBIRD_TOKEN }} deploy
+
+
+
+  ## Tinybird Tests (Classic) — This job is deprecated and will be removed very soon.
   deploy_tinybird:
     runs-on: ubuntu-latest
     env:
