Removed --staging flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1353,7 +1353,7 @@ jobs:
       - name: Install Tinybird CLI
         run: curl -fsSL https://tinybird.co/install.sh | sh
       - name: Deploy project
-        run: tb --staging --host ${{ env.TINYBIRD_HOST }} --token ${{ env.TINYBIRD_TOKEN }} deploy
+        run: tb --cloud --host ${{ env.TINYBIRD_HOST }} --token ${{ env.TINYBIRD_TOKEN }} deploy
 
 
 
