Added Tinybird Forward CD job (#22865)
ref
https://linear.app/ghost/issue/PROD-217/figure-out-deployment-and-cicd-strategy-with-tinybird-forward

- Now that we've migrated our datafiles to the Tinybird Forward
workspace, this CD job deploys the changes to our Tinybird files to the
workspace so we can make changes to our workspace by pushing changes to
`main`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
               - 'ghost/web-analytics/**'
               - '!ghost/web-analytics/**/*.md'
             tinybird-forward:
-              - 'ghost/core/core/server/data/tinybird'
+              - 'ghost/core/core/server/data/tinybird/**'
               - '!ghost/core/core/server/data/tinybird/**/*.md'
             any-code:
               - '!**/*.md'
@@ -1332,6 +1332,32 @@ jobs:
         uses: gacts/purge-jsdelivr-cache@v1
         with:
           url: ${{ steps.cdn_paths.outputs.cdn_paths }}
+
+  deploy_tinybird_forward:
+    name: Deploy Tinybird Forward
+    runs-on: ubuntu-latest
+    needs: [
+      job_setup,
+      job_tinybird_forward
+    ]
+    if: always() && needs.job_setup.outputs.changed_tinybird_forward == 'true' && needs.job_setup.result == 'success' && needs.job_tinybird_forward.result == 'success' && needs.job_setup.outputs.is_main == 'true'
+    env:
+      TINYBIRD_HOST: ${{ secrets.TINYBIRD_HOST }}
+      TINYBIRD_TOKEN: ${{ secrets.TINYBIRD_TOKEN }}
+    defaults:
+      run:
+        working-directory: ghost/core/core/server/data/tinybird
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Tinybird CLI
+        run: curl -fsSL https://tinybird.co/install.sh | sh
+      - name: Check the deployment
+        run: tb --cloud --host ${{ env.TINYBIRD_HOST }} --token ${{ env.TINYBIRD_TOKEN }} deployment create --check
+      - name: Create a staging deployment
+        run: tb --cloud --host ${{ env.TINYBIRD_HOST }} --token ${{ env.TINYBIRD_TOKEN }} deployment create --wait
+
+  ## Tinybird Tests (Classic) — This job is deprecated and will be removed very soon.
   deploy_tinybird:
     runs-on: ubuntu-latest
     env:
