--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -31,6 +31,7 @@
         "@tryghost/shade": "0.0.0",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
+        "moment-timezone": "^0.5.48",
         "react": "18.3.1",
         "react-dom": "18.3.1"
     },
