--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -18,6 +18,9 @@
     "scripts": {
         "dev": "vite build --watch",
         "dev:start": "vite",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "build": "tsc && vite build",
         "lint": "yarn run lint:code && yarn run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
@@ -33,6 +36,7 @@
         "@types/react": "18.3.20",
         "@types/react-dom": "18.3.6",
         "@types/react-svg-map": "2.1.4",
+        "@vitejs/plugin-react": "^4.4.1",
         "moment-timezone": "^0.5.48",
         "react": "18.3.1",
         "react-dom": "18.3.1",
