--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ test/functional/*.png
 # Built asset files
 /ghost/core/core/built
 /ghost/core/core/frontend/public/ghost.min.css
+/ghost/core/core/frontend/public/ghost-stats.bundled.js
 
 # Caddyfile - for local development with ssl + caddy
 Caddyfile
