Overhauled ghost-stats script (#22987)
ref https://linear.app/ghost/issue/PROD-641/bundle-ghost-stats-script

We initially pulled the Tinybird web analytics tracking script, and due
to limitations in it, served our own copy of it with minimal
modification. Now that we're fully intend to use this script, we need to
update/rewrite it.

One of the major challenges is that we want parity between our
`member-attribution` url parsing (pulling out the ref, source, utm
params) and this script. We had copy-pasted that as well, which leads to
possible issues down the road with maintenance.

This PR adds a bundler step to serving the public asset prior to
minification so that we can use imports like `uuidv4` and
`tryghost/timezone-data`. This also pulls out the url attribution
functions into a utility file that can be used by the
`member-attribution` script in a separate commit to follow.

The script itself was overhauled in this process, pulling out all the
basic functions into utility files we can easily unit test. We moved to
using `fetch()` which is supported by any 'modern' browser (~past 5y).
If this proves difficult, we can move to a polyfill. We may want to add
logging to capture this when it does occur.

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -52,7 +52,8 @@
     "lint:code": "yarn lint:server && yarn lint:shared && yarn lint:frontend",
     "lint:types": "eslint --ignore-path .eslintignore '**/*.ts' --cache && tsc --noEmit",
     "lint": "yarn lint:server && yarn lint:shared && yarn lint:frontend && yarn lint:test && yarn lint:types",
-    "prepack": "node monobundle.js"
+    "prepack": "node monobundle.js",
+    "test:bundle-stats": "node scripts/test-ghost-stats-bundle.js"
   },
   "engines": {
     "node": "^18.12.1 || ^20.11.1 || ^22.13.1",
@@ -120,6 +121,7 @@
     "@tryghost/social-urls": "0.1.46",
     "@tryghost/string": "0.2.12",
     "@tryghost/tiers": "0.0.0",
+    "@tryghost/timezone-data": "^0.4.5",
     "@tryghost/tpl": "0.1.32",
     "@tryghost/url-utils": "4.4.8",
     "@tryghost/validator": "0.2.14",
@@ -149,6 +151,7 @@
     "date-fns": "2.30.0",
     "dompurify": "3.2.5",
     "downsize": "0.0.8",
+    "esbuild": "^0.25.2",
     "express": "4.21.2",
     "express-brute": "1.0.1",
     "express-hbs": "2.5.0",
@@ -242,6 +245,7 @@
     "cssnano": "7.0.4",
     "detect-indent": "6.1.0",
     "detect-newline": "3.1.0",
+    "esbuild": "0.19.11",
     "expect": "29.7.0",
     "find-root": "1.1.0",
     "form-data": "4.0.0",
