--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ test/functional/*.png
 /ghost/core/core/built
 /ghost/core/core/frontend/public/ghost.min.css
 /ghost/core/core/frontend/src/ghost-stats/ghost-stats.bundled.js
+/ghost/core/core/frontend/src/member-attribution/member-attribution.bundled.js
 
 # Caddyfile - for local development with ssl + caddy
 Caddyfile
