--- a/ghost/admin/package.json
+++ b/ghost/admin/package.json
@@ -177,6 +177,7 @@
   "dependencies": {
     "i18n-iso-countries": "7.14.0",
     "jose": "4.15.9",
+    "lru-cache": "6.0.0",
     "path-browserify": "1.0.1",
     "webpack": "5.99.6"
   },
