--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -23,7 +23,7 @@
     "archive": "npm pack",
     "dev": "node --watch index.js",
     "build:assets:css": "postcss core/frontend/public/ghost.css --no-map --use cssnano -o core/frontend/public/ghost.min.css",
-    "build:assets:js": "../minifier/bin/minify core/frontend/public/comment-counts.js core/frontend/public/comment-counts.min.js && ../minifier/bin/minify core/frontend/public/member-attribution.js core/frontend/public/member-attribution.min.js && ../minifier/bin/minify core/frontend/public/admin-auth/message-handler.js core/frontend/public/admin-auth/admin-auth.min.js",
+    "build:assets:js": "node bin/minify-assets.js",
     "build:assets": "yarn build:assets:css && yarn build:assets:js",
     "build:tsc": "tsc",
     "test": "yarn test:unit",
@@ -251,6 +251,7 @@
     "cssnano": "7.0.4",
     "detect-indent": "6.1.0",
     "detect-newline": "3.1.0",
+    "esbuild": "^0.25.3",
     "expect": "29.3.1",
     "find-root": "1.1.0",
     "form-data": "4.0.0",
