--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -22,7 +22,9 @@
   "scripts": {
     "archive": "npm pack",
     "dev": "node --watch --import=tsx index.js",
-    "build:assets": "postcss core/frontend/public/ghost.css --no-map --use cssnano -o core/frontend/public/ghost.min.css",
+    "build:assets": "yarn build:assets:css && yarn build:assets:js",
+    "build:assets:js": "node bin/minify-assets.js",
+    "build:assets:css": "postcss core/frontend/public/ghost.css --no-map --use cssnano -o core/frontend/public/ghost.min.css",
     "build:tsc": "tsc",
     "test": "yarn test:unit",
     "test:base": "mocha --reporter dot --require tsx --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js,test.ts",
@@ -289,7 +291,8 @@
       },
       "dev": {
         "dependsOn": [
-          "^build:ts"
+          "^build:ts",
+          "build:assets"
         ]
       },
       "test": {
