Test the minified file

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -312,7 +312,8 @@
       },
       "test:unit": {
         "dependsOn": [
-          "^build:ts"
+          "^build:ts",
+          "build:assets"
         ]
       },
       "test:integration": {
