--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -26,6 +26,7 @@
     "build:assets:js": "node bin/minify-assets.js",
     "build:assets:css": "postcss core/frontend/public/ghost.css --no-map --use cssnano -o core/frontend/public/ghost.min.css",
     "build:tsc": "tsc",
+    "pretest": "yarn build:assets",
     "test": "yarn test:unit",
     "test:base": "mocha --reporter dot --require tsx --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js,test.ts",
     "test:single": "yarn test:base --timeout=60000",
