--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "build": "tsc -p tsconfig.declaration.json && vite build",
         "prepare": "yarn build",
-        "test": "yarn test:unit",
+        "test": "yarn test:types && yarn nx build && vitest run --coverage",
         "test:unit": "yarn test:types && yarn nx build && vitest run",
         "test:types": "tsc --noEmit",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx src/ --cache",
