--- a/ghost/member-attribution/package.json
+++ b/ghost/member-attribution/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tryghost/domain-events": "0.0.0",
     "@tryghost/member-events": "0.0.0",
+    "@tryghost/referrer-parser": "0.0.2",
     "@tryghost/string": "0.2.13"
   }
 }
