Prevented database tests running in CI if only Tinybird FORWARD files have changed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
               - 'ghost/**'
               - '!ghost/admin/**'
               - '!ghost/web-analytics/**'
+              - '!ghost/core/core/server/data/tinybird/**'
             admin:
               - *shared
               - 'ghost/admin/**'
