--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,7 @@ jobs:
               - *shared
               - 'apps/admin-x-settings/**'
               - 'apps/admin-x-design-system/**'
+              - 'apps/admin-x-framework/**'
             announcement-bar:
               - *shared
               - 'apps/announcement-bar/**'
