--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -177,7 +177,7 @@
     "intl-messageformat": "5.4.3",
     "js-yaml": "4.1.0",
     "json-stable-stringify": "1.3.0",
-    "jsonc-parser": "^3.3.1",
+    "jsonc-parser": "3.3.1",
     "jsonpath": "1.1.1",
     "jsonwebtoken": "8.5.1",
     "juice": "9.1.0",
