--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,7 @@ name: ghost
 
 # Base configuration for the Ghost Monorepo container
 # Ref: https://docs.docker.com/reference/compose-file/fragments/
-x-ghost-base: &ghost-base
+x-service-template: &service-template
   image: ghost-monorepo:latest
   pull_policy: never
   entrypoint: [ "/home/ghost/.docker/development.entrypoint.sh" ]
@@ -55,7 +55,7 @@ x-ghost-base: &ghost-base
 
 services:
   server:
-    <<: *ghost-base
+    <<: *service-template
     build:
       context: .
       dockerfile: ./.docker/Dockerfile
@@ -82,7 +82,7 @@ services:
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID:-}
 
   admin:
-    <<: *ghost-base
+    <<: *service-template
     working_dir: /home/ghost/ghost/admin
     command: [ "yarn", "dev" ]
     ports:
@@ -97,7 +97,7 @@ services:
 
 
   daemon:
-    <<: *ghost-base
+    <<: *service-template
     profiles: [ split, daemon ]
     entrypoint: [ "/home/ghost/.docker/daemon.entrypoint.sh" ]
     environment:
@@ -105,7 +105,7 @@ services:
 
 
   portal:
-    <<: *ghost-base
+    <<: *service-template
     working_dir: /home/ghost/apps/portal
     command: [ "yarn", "dev" ]
     ports:
@@ -117,7 +117,7 @@ services:
 
 
   signup-form:
-    <<: *ghost-base
+    <<: *service-template
     working_dir: /home/ghost/apps/signup-form
     command: [ "yarn", "dev" ]
     ports:
@@ -127,7 +127,7 @@ services:
     profiles: [ signup-form ]
 
   announcement-bar:
-    <<: *ghost-base
+    <<: *service-template
     working_dir: /home/ghost/apps/announcement-bar
     command: [ "yarn", "dev" ]
     ports:
@@ -138,7 +138,7 @@ services:
 
 
   sodo-search:
-    <<: *ghost-base
+    <<: *service-template
     working_dir: /home/ghost/apps/sodo-search
     command: [ "yarn", "dev" ]
     ports:
@@ -158,7 +158,7 @@ services:
     profiles: [ comments-ui ]
 
   ghost:
-    <<: *ghost-base # Merge the base configuration
+    <<: *service-template # Merge the base configuration
     build:
       context: .
       dockerfile: ./.docker/Dockerfile
@@ -197,7 +197,7 @@ services:
 
 
   storybook:
-    <<: *ghost-base
+    <<: *service-template
     command: [ "yarn", "storybook", "dev", "-p", "6006", "-h", "0.0.0.0", "--no-open"]
     working_dir: /home/ghost/apps/shade
     profiles: [ storybook ]
@@ -205,6 +205,7 @@ services:
       - "6006:6006" # Storybook
     environment:
       - NX_DAEMON=false
+
   mysql:
     image: mysql:8.4.5
     container_name: ghost-mysql
